# tcommenter

./: .gitignore  LICENSE  README.md  _requirements.txt  readme.md  requirements.txt  setup.cfg  tasks.txt
SQL/: Requests_to_Postgres_metadata.sql  Script-34.sql
examples/: example_usage.py
ignore/: olds.py
table_commentator/: __init__.py  table_commentator.py
table_commentator/sql/: postgre_sql.py
tcommenter/: __init__.py  tcommenter.py
tcommenter/sql/: postgre_sql.py
tests/: start_test_table_commentator.py  test_create_table.py  tools.py
tests/connnections/: connection.py
tests/field_tests/: real_db_examples.py
tests/integration_tests/: test_integration.py  test_real_db.py
tests/tests_table_commentator/: py_test_table_commentator_0.2.0v_dev.py
tests/tests_table_commentator/dev_0_2_0v/: test_mock.py  test_real_db.py
tests/tests_tcommenter/dev_0_2_0v/: old_test_0_2_0v.py  test_mock.py
tests/unit_tests/: old_test_0_2_0v.py  test_.py  test_unit.py
tests/utilities/: utilities.py
