[metadata]
name = table_commentator       # Укажите имя вашего пакета
version = 0.1.0                # Версия пакета
author = ArtemXYZ             # Ваше имя
author_email = ArtemXYZ@users.noreply.github.com  # Ваш email
description = A module for working with table metadata (comments on tables, views, materialized views, and columns) \
    in PostgreSQL.  # Краткое описание
long_description = file: README.md  # Содержимое README.md будет использоваться как длинное описание
long_description_content_type = text/markdown  # Формат длинного описания
url = https://github.com/ArtemXYZ/table_commentator.git  # Ссылка на ваш проект
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = .

# Автоматически найдёт все пакеты (каталоги с файлом init.py) относительно указанного пути.
packages = find:

python_requires = >=3.6  # Минимальная версия Python
install_requires =
    SQLAlchemy >=1.4.54        # Зависимости


[options.packages.find]

where = .  # Укажите директорию, где искать пакеты (это указывает setuptools искать пакеты прямо в корне).


[options.extras_require]
dev =
    pytest               # Зависимости для разработки
    black