[metadata]
name = table_commentator       # Укажите имя вашего пакета
version = 0.1.0                # Версия пакета
author = ArtemXYZ             # Ваше имя
author_email = ArtemXYZ@users.noreply.github.com  # Ваш email
description = A module for working with table metadata (comments on tables, views, materialized views, and columns) \
    in PostgreSQL.  # Краткое описание
long_description = file: README.md  # Содержимое README.md будет использоваться как длинное описание
long_description_content_type = text/markdown  # Формат длинного описания
url = https://github.com/ArtemXYZ/table_commentator.git  # Ссылка на ваш проект
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
# Относительно этой директории определяется расположение модулей и пакетов.
package_dir = .

# Авто поиск пакетов.
packages = find:

python_requires = >=3.6  # Указывает минимальную версию Python, с которой совместима библиотека.

# Указывает список зависимостей, которые должны быть установлены вместе с библиотекой
# (будут автоматически добавлены в окружение при установке пакета).
install_requires =
    SQLAlchemy >= 2.0.37, <9.0.0

[options.packages.find]
# Указывает setuptools где искать пакеты (с файлом init.py) в package_dir.
where = .

# Дополнительные зависимости, для разработки и тестирования (установка опциональна: pip install .[dev]).
[options.extras_require]
dev =
    pytest >= 8.3.4, <9.0.0
