[metadata]
name = table_commentator
version = 0.1.0
author = ArtemXYZ
author_email = ArtemXYZ@users.noreply.github.com
description = A module for working with table metadata (comments on tables, views, materialized views, and columns) \
    in PostgreSQL.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ArtemXYZ/table_commentator.git
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = .

packages = find:

python_requires = >=3.8, <4.0

install_requires =
    SQLAlchemy>=2.0.37, <3.0.0

[options.packages.find]
where = .

[options.extras_require]
dev =
    pytest>=8.3.4, <9.0.0
